# ozonmasters_python_2022_pub

day_01/: README.md  asterisk__double_asterisk.ipynb
day_02/: README.md  iterator_protocol.ipynb
day_02_homework/: README.md  Untitled.ipynb  homework_stats.ipynb
day_02_homework/short/: task_01.py  task_02.py  task_03.py  task_04.py  task_05.py  task_06.py  task_07.py  task_08.py  task_09.py  task_10.py  test_all.py
day_03/: README.md
day_03/context_managers/: context_managers.ipynb
day_03_homework/closing/: README.md  test.py  your_code.py
day_03_homework/contextmanager/: README.md
day_03_homework/exit_stack/: your_code.py
day_03_homework/nullcontext/: README.md
day_03_homework/popped_key/: README.md  test.py
day_03_homework_contextmanager/: README.md
day_03_homework_contextmanager/contextmanager/: test.py
day_03_homework_contextmanager/contextmanager_with_for_in/: README.md  test.py
day_03_homework_contextmanager/exit_stack/: README.md  test.py
day_03_homework_contextmanager/nullcontext/: test.py  your_code.py
day_04/: README.md
day_04/testing/: conftest.py  (+2 more)
day_05/: README.md  object_model_1.ipynb
day_06/: HomeworkDay03CommonMistakes.ipynb  PythonTooling.ipynb  README.md
day_06_homework_tooling/: README.md  pyproject.toml
day_08_concurrency/: README.md
day_09_imports__patterns/: README.md
day_10_asyncio/: README.md
day_11_asyncio_2/: README.md
day_12/: .gitignore  README.md
day_xx_homework/: .gitlab-ci.yml  Makefile  mypy.ini  pyproject.toml
hw_04_decorators_mixins/: .gitlab-ci.yml  Makefile  README.md  pyproject.toml
(+37 files in other folders)
